--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "gl-playwright-automation-trello",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "dev-run": "npx playwright test --project=chromium"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.47.0",
     "@types/node": "^22.5.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
